--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <div class="about-text">
                 <h2>About <span>Me</span></h2>
                 <h4>Programmer</h4>
-                <p class="p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus deserunt dolorem vitae natus sed iusto, facere eos itaque fuga hic neque at atque temporibus eligendi quod sunt beatae blanditiis corrupti.</p>
+                <p class="p">I'm Prudence Makena<br>
+                    I am a competent program fluent in Python, HTML, CSS and Javascript<p>
                 <a href="#" class="btn">More Info</a>
             </div>
         </section>
@@ -57,7 +58,7 @@
                         <i class="bx bx-code-alt"></i>
                     </div>
                     <h3>Programming</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos sed, suscipit asperiores repellat quia quod autem itaque obcaecati, commodi alias nobis a nihil consequatur sunt! Impedit iusto dolorem quam facilis?</p>
+                    <p>I am familiar with python programming and a bit of C++</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
                 <div class="box">
@@ -65,7 +66,7 @@
                         <i class="bx bx-edit-alt"></i>
                     </div>
                     <h3>Web Design</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos sed, suscipit asperiores repellat quia quod autem itaque obcaecati, commodi alias nobis a nihil consequatur sunt! Impedit iusto dolorem quam facilis?</p>
+                    <p>I am able to use HTML, CSS and JavaScript to make a fun, beautiful and interractive website</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
                 <div class="box">
@@ -73,7 +74,7 @@
                         <i class="bx bx-mobile-alt"></i>
                     </div>
                     <h3>Robotics</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos sed, suscipit asperiores repellat quia quod autem itaque obcaecati, commodi alias nobis a nihil consequatur sunt! Impedit iusto dolorem quam facilis?</p>
+                    <p>I have worked with controllers such as Rasperry Pi, ESP-32 and Arduino</p>
                     <a href="#" class="btn">Read More</a>
             </div>
         </section>
@@ -84,18 +85,18 @@
             </div>
             <div class="port-con">
                 <div class="row">
-                    <img src="./u.png">
+                    <img src="./f.png">
                     <div class="layer">
-                        <h3>Coding</h3>
-                        <p>Check out some python codes</p>
+                        <h3>Web Development</h3>
+                        <p>Check out some web pages</p>
                         <a href="#"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
                 <div class="row">
                     <img src="./2.png">
                     <div class="layer">
-                        <h3>Coding</h3>
-                        <p>Check out some python codes</p>
+                        <h3>Robotics</h3>
+                        <p>Check out some machines</p>
                         <a href="#"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
