--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#home" class="active">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#services">SERVICES</a></li>
-                <li><a href="#portfolio">PORTFOLIO</a></li>
+                <li><a href="#portfolio">PROJECTS</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
             <div class="bx bx-menu" id="icon"></div>
@@ -28,10 +28,7 @@
                 </div>
                 <h1>Prudence</h1>
                 <h3>A Programmer</h3>
-                <p>An upcoming programmer</p>
-                <div class="button">
-                    <a href="#" class="btn">Download CV</a>
-                </div>
+                <p>Fluent in python and a bit of C++</p>
             </div>
         </section>
         <!-- about section -->
@@ -44,7 +41,6 @@
                 <h4>Programmer</h4>
                 <p class="p">I'm Prudence Makena<br>
                     I am a competent program fluent in Python, HTML, CSS and Javascript<p>
-                <a href="#" class="btn">More Info</a>
             </div>
         </section>
         <!-- services section -->
@@ -59,7 +55,6 @@
                     </div>
                     <h3>Programming</h3>
                     <p>I am familiar with python programming and a bit of C++</p>
-                    <a href="#" class="btn">Read More</a>
                 </div>
                 <div class="box">
                     <div class="s-icons">
@@ -67,7 +62,6 @@
                     </div>
                     <h3>Web Design</h3>
                     <p>I am able to use HTML, CSS and JavaScript to make a fun, beautiful and interractive website</p>
-                    <a href="#" class="btn">Read More</a>
                 </div>
                 <div class="box">
                     <div class="s-icons">
@@ -75,7 +69,6 @@
                     </div>
                     <h3>Robotics</h3>
                     <p>I have worked with controllers such as Rasperry Pi, ESP-32 and Arduino</p>
-                    <a href="#" class="btn">Read More</a>
             </div>
         </section>
         <!-- portfolio section -->
@@ -112,8 +105,8 @@
                 <div class="row">
                     <img src="./5.png">
                     <div class="layer">
-                        <h3>Coding</h3>
-                        <p>Check out some python codes</p>
+                        <h3>Online IDE</h3>
+                        <p>Check out my online IDE in WOKWI</p>
                         <a href="#"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
